--- a/ru/stylesheet.css
+++ b/ru/stylesheet.css
@@ -236,6 +236,7 @@ body {
 }
 .image-1 {
     width: 35%;
+    height: intrinsic;
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -260,9 +261,10 @@ body {
 }
 .image-2 {
     width: 35%;
+    height: intrinsic;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: 10%;
+    /*margin-left: 10%;*/
 }
 .h1-dark {
     font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif;
