--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,10 @@
     font-family: 'Rubik Light';
     src: url('assets/Rubik/Rubik-Light.ttf') format('truetype')
 }
+@font-face {
+    font-family: 'Rubik Light';
+    src: url('assets/Rubik/Rubik-Light.ttf') format('truetype')
+}
 body {
     margin: 0;
     background-color: #1c1c1c;
@@ -184,8 +188,8 @@ body {
     transition: margin-top .5s ease-out, margin-left .5s ease-out;
 }
 #logo-image-div2 {
-    margin-top: 160px;
-    margin-left: 200px;
+    margin-top: 120px;
+    margin-left: 170px;
     transition: margin-top .5s ease-out, margin-left .5s ease-out;
 }
 .block1 {
@@ -649,7 +653,8 @@ footer {
     }
     #logo-image-div2-device {
         width: 70%;
-        margin: 120px 60px 80px auto;
+        /* margin: 120px 60px 80px auto; */
+        margin: auto 30px auto 30px;
     }
     #text-h1-block1 {
         position: relative;
@@ -672,7 +677,8 @@ footer {
     }
     .image-get-started {
         margin-top: 45px;
-        margin-right: 0;
+        margin-right: auto;
+        margin-left: auto;
     }
     .block2 {
         height: fit-content;
