--- a/stylesheet.css
+++ b/stylesheet.css
@@ -654,7 +654,7 @@ footer {
     #logo-image-div2-device {
         width: 70%;
         /* margin: 120px 60px 80px auto; */
-        margin: auto 30px auto 30px;
+        margin: 125px auto 50px auto;
     }
     #text-h1-block1 {
         position: relative;
