--- a/stylesheet.css
+++ b/stylesheet.css
@@ -199,7 +199,7 @@ body {
     height: auto;
     max-height: 100vh;
     /* 3d image */
-    background: url("./3d-yuamble.webp");
+    background: url(./3d-yuamble-new.webp);
     background-position: -20vw;
     background-size: cover;
 }
